[ios] Allow searching for bookmark folders

- Stop filtering folders out of search results in mediator.
- When user selects a Folder in search results, recompute and reset the stack
  of view controllers, so that the user is in proper place in the bookmark panel stacks for
  back button functionality.

Video: https://drive.google.com/file/d/18-dhC7ZE4j5tounA9I6LiLNGBtTVyTJM/view?usp=sharing

Bug: 886612
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: I7ac42afcaba937b278548f3a37b8d07b87dc4a67
Reviewed-on: https://chromium-review.googlesource.com/c/1254142
Commit-Queue: David Jean <djean@chromium.org>
Reviewed-by: Sergio Collazos <sczs@chromium.org>
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596141}
Former-commit-id: 9bc8b198e07a27c860749ff4a40e37257e10c723